--- a/web/app/templates/product-list.html
+++ b/web/app/templates/product-list.html
@@ -22,5 +22,5 @@
             </tr>
         </tbody>
     </table>
-    <a href="products/create">Create New Product</a>
+    <a href="products/index.html#!/products/create">sdfdsf New Product</a>
 </div>
